# cpp_pluggable_factory

./: .gitignore  Base.cpp  Base.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleMaker.cpp  CircleMaker.h  DerivedA.cpp  DerivedA.h  DerivedB.cpp  DerivedB.h  Factory.h  Rectangle.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  ShapeMaker.cpp  ShapeMaker.h  main.cpp
